Removed unused code, added javadoc where needed, removed unused imports